--- a/zacatek/02.java/index.html
+++ b/zacatek/02.java/index.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-
-    <input id="firstNumber" type="number">
-
-    <input id="secondNumber" type="number">
-
-    <input id="result" ty>
-
-    <button onclick="myFunction()">vypočítat</button>
-
-
-    <input placeholder="a" id="firstNumber">
-    <input placeholder="a" id="secondNumber">
-    <button onclick="text"></button>
-    <input readonly id="outNumber">
+   
+    
+    <br><br>
+    <input type="number" id="age" placeholder="Zadejte věk">
+   
+ 
+<button type="submit" onclick="checkAge()">Zkontrolovat</button>
+<h3 id="result"></h3>
+<br><br>
+ 
+ 
+ 
 </body>
 </html>
